readme and finitions (then I'll go to sleep!)

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
 	<!-- Footer -->
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> Hire me! <span class="glyphicon glyphicon-heart"></p>
+        <p><span class="glyphicon glyphicon-heart"></span> Hire me! I'm full of Motivation!<span class="glyphicon glyphicon-heart"></p>
       </div>
     </div>
 
